<resources>
    <string name="app_name">Exercise_01</string>
    <string name="txt1">Tymoteusz Lango</string>
    <string name="button1">Button 1</string>
    <string name="button2">Button 2</string>
    <string name="button3">Button 3</string>
    <string name="button4">Button 4</string>
    <string name="activity_2">Welcome to Activity 2!</string>
    <string name="activity_3">Welcome to Activity 3!</string>
    <string name="press_me_long">Press me long...</string>
</resources>